change lewagon url

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         The definition of a superwoman is a woman with super human powers or a woman who performs well in her various demanding roles. An example of a superwoman is the character<strong> Wonder Woman</strong> who has powers which are greater than the typical human woman.
       </p>
 
-    <a href="https://lewagon.com">See for yourself</a>
+    <a href="https://www.lewagon.com">See for yourself</a>
    </div>
  <div class="card text-center">
     <ul class="list-inline">
